k8s/apps/stalwart/backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: stalwart-proxy-protocol
  namespace: stalwart
spec:
  proxyProtocol:
    version: V2
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      name: stalwart-smtp
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      name: stalwart-smtps
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      name: stalwart-submission
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      name: stalwart-imaps
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: stalwart
