k8s/apps/stalwart/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart
  namespace: stalwart
spec:
  hostnames:
    - stalwart.local.walnuts.dev
    - autoconfig.walnuts.dev
    - autodiscover.walnuts.dev
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - kind: Service
          name: stalwart
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
