k8s/apps/stalwart/ciliumnetworkpolicy-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: stalwart-egress
  namespace: stalwart
spec:
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:cnpg.io/cluster: postgresql-default
            k8s:cnpg.io/instanceRole: primary
            k8s:io.kubernetes.pod.namespace: databases
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: stalwart
            k8s:valkey.io/cluster: stalwart-valkey
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:common.k8s.elastic.co/type: elasticsearch
            k8s:elasticsearch.k8s.elastic.co/cluster-name: stalwart
            k8s:io.kubernetes.pod.namespace: stalwart
      toPorts:
        - ports:
            - port: "9200"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/component: s3
            k8s:app.kubernetes.io/instance: seaweedfs-default
            k8s:app.kubernetes.io/name: seaweedfs
            k8s:io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "8333"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/component: proxy
            k8s:app.kubernetes.io/managed-by: envoy-gateway
            k8s:app.kubernetes.io/name: envoy
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "10443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/instance: opentelemetry-collector.default
            k8s:app.kubernetes.io/name: default-collector
            k8s:io.kubernetes.pod.namespace: opentelemetry-collector
      toPorts:
        - ports:
            - port: "4317"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "25"
              protocol: TCP
            - port: "587"
              protocol: TCP
            - port: "443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      k8s:app: stalwart
      k8s:app.kubernetes.io/name: stalwart
